WIP: Start on web article handler
Structure:
  * Add ArticleService dependency so web member handler can list articles.
  * Use view POJOs when rendering templates.
  * Add base view to hold values common to all views.
  * Update web module info to open views package so mustache rendering works.
  * Delete MemberDashboard value type, it is not needed.
  * Update CheckStyle from 9.2.1 to 9.3 to support switch patterns in
  exception blocks.

Security:
  * Add PublicMember entity to hold member data viewable by anyone.
  * Update member service to return the public member.
  * Add AdminHttpPrincipal to identify site admins.
  * Add new isAdmin attribute to Member record.
  * Update SecurityProxy to rethrow base exceptions instead of wrapping them.

Clarity:
  * Rename member Create handler to CreateHandler
  * Distinguish between logged in member (principal) and member being viewed.
  * Update MemberService method order and remove whitespace.

WIP: Start on web article handler

Structure:
  * Add ArticleService dependency so web member handler can list articles.
  * Use view POJOs when rendering templates.
  * Add base view to hold values common to all views.
  * Update web module info to open views package so mustache rendering works.
  * Delete MemberDashboard value type, it is not needed.
  * Update CheckStyle from 9.2.1 to 9.3 to support switch patterns in
  exception blocks.

Security:
  * Add PublicMember entity to hold member data viewable by anyone.
  * Update member service to return the public member.
  * Add AdminHttpPrincipal to identify site admins.
  * Add new isAdmin attribute to Member record.
  * Update SecurityProxy to rethrow base exceptions instead of wrapping them.

Clarity:
  * Rename member Create handler to CreateHandler
  * Distinguish between logged in member (principal) and member being viewed.
  * Update MemberService method order and remove whitespace.